--- a/src/main/resources/static/css/updateMemberInfo.css
+++ b/src/main/resources/static/css/updateMemberInfo.css
@@ -19,7 +19,7 @@ body {
 .header_menu:hover {
 	background-color: #575757;
 }
-.top-container{
+.box{
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -40,7 +40,7 @@ h1 {
 	text-align: center;
 	font-size: 1.5rem;
 	font-weight: bolder;
-	margin-bottom: 20px;
+	margin-bottom: 40px;
 }
 
 h2 {
