--- a/src/main/resources/static/css/headerIndex.css
+++ b/src/main/resources/static/css/headerIndex.css
@@ -7,6 +7,7 @@
   width: 100%;
   height: 80px;
   z-index: 1000;
+  min-width: 600px;
 }
 .main_header_body {
   height: 100%;
@@ -63,7 +64,9 @@
 .main_header_right a {
   color: #fca35b;
   font-family: "Do Hyeon", sans-serif;
+  padding-right: 15px;
 }
+
 
 .main_header_right_menu {
 }
