기능 거의다완료

--- a/src/main/resources/static/css/membershipPage.css
+++ b/src/main/resources/static/css/membershipPage.css
@@ -221,7 +221,7 @@
 	display: none;
 }
 .accordion-collapse.collapsing {
-	height: 700px !important;
+	max-height: 700px !important;
 }
 
 .accordion-body {
