--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -17,8 +17,18 @@ body {
 .fa-solid.fa-user-plus {
 	font-size: 1.2rem;
 }
-
-
+.fa-solid.fa-temperature-quarter{
+	font-size: 1.8rem;
+	color:#004e98;
+}
+.fa-solid.fa-temperature-half{
+	font-size: 1.8rem;
+	color:#ffd100;
+}
+.fa-solid.fa-temperature-three-quarters{
+	font-size: 1.8rem;
+	color:#a4161a;
+}
 
 input[type=text] {
 	width: 100%;
@@ -135,7 +145,7 @@ input[type=text] {
 	justify-content: center;
 }
 .profile_manner p {
-	font-size: 1.2rem;
+	font-size: 1.5rem;
 	font-weight: bolder;
 	padding-right: 5px;
 	padding-left: 5px;
