--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -167,18 +167,14 @@ input[type="submit"]:hover {
 }
 
 div[id^="comment-box"] {
-text-wrap: nowrap;
-border: 1px solid #fca311;
-   border-radius: 10px;
-   max-width: 800px;
-  width: 100%;
-  height: 100px;
-  display: flex;
-  justify-content: space-between;
-  padding: 8px;
-  align-items: center;
-  background-color: #e5e5e5;
-  margin-top: 10px;
+	text-wrap: nowrap;
+    max-width: 800px;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
 }
 div[id^="recomment-box"] {
   display: none;
@@ -242,14 +238,28 @@ button > img {
 .prof {
   display: flex;
   align-items: center;
-  flex-flow: column-reverse;
+  justify-content: center;
 }
 .prof img {
-  margin: 0;
+  width : 45px;
+  height: 45px;
+}
+#textboxBox{
+	width: 100%
+}
+
+#textbox{
+    border-style: none;
+    border-bottom: 1px solid #bbbbbb;
+    display: flex;
+    width: 100%;
+    padding : 5px;
+    outline: none;
 }
 #textbox > button {
-  height: 50%;
 }
+
+
 .comment > p {
   padding: 10px;
 }
