--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -35,15 +35,10 @@ body {
 	color: #a4161a;
 }
 
-.fc .fc-toolbar-title{
+.fc .fc-toolbar-title {
 	font-size: 1.5rem;
 	margin: 0px;
 }
-
-
-
-
-
 
 input[type=text] {
 	width: 100%;
@@ -53,8 +48,6 @@ input[type=text] {
 	border-radius: 10px;
 	background-color: rgb(233, 233, 233);
 }
-
-
 
 .form-control {
 	display: none;
@@ -73,6 +66,10 @@ input[type=text] {
 	cursor: pointer;
 	border-radius: 4px;
 	color: white;
+	width: 180px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .profile_file_button:hover {
@@ -95,6 +92,9 @@ input[type=text] {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	width: 90%;
 }
 
 /* 정보 컨테이너 */
@@ -126,7 +126,7 @@ input[type=text] {
 .profile_file {
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-around;
 }
 
 .profile_img {
@@ -208,6 +208,11 @@ input[type=text] {
 	flex-direction: row;
 }
 
+.host_text {
+	display: flex;
+	flex-direction: row;
+}
+
 #all-club, #manage-club, #wait-club {
 	display: flex;
 	flex-direction: column;
@@ -236,7 +241,6 @@ input[type=text] {
 	margin-bottom: 20px;
 	overflow: hiddlen;
 	white-space: nowrap;
-	
 }
 
 .membership-card h1 {
@@ -329,10 +333,9 @@ input[type=text] {
 	justify-content: center;
 }
 
-#submit:hover,#updateCheck:hover {
+#submit:hover, #updateCheck:hover {
 	background-color: #e76f00;
 }
-
 
 #updateSubmit:hover {
 	background-color: #e76f00;
@@ -344,13 +347,12 @@ input[type=text] {
 	background-color: #fca311;
 	color: white;
 	border: none;
-	border-radius: 5px;
 	cursor: pointer;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding: 10px 10px;
-	margin: 10px 17px 10px 17px;
+	padding: 20px;
+	margin: auto;
 	overflow: hiddlen;
 	white-space: nowrap;
 	font-weight: bolder;
@@ -371,10 +373,11 @@ input[type=text] {
 	color: white;
 	border: none;
 	border-radius: 6px;
-	width: 100px;
+	width: 150px;
 	height: 40px;
 	font-size: 1rem;
 	font-weight: bolder;
+	margin-right: 10px;
 }
 
 .btn:hover {
@@ -410,12 +413,16 @@ input[type=text] {
 	width: 100%;
 }
 
+.toggle_form {
+	width: 0%;
+	height: 0%;
+}
+
 #menu {
 	flex-direction: row;
 	overflow: hidden;
 	transition: 0.5s ease-in-out;
 	width: 100%;
-	
 }
 
 #icon {
@@ -430,27 +437,56 @@ input[type=text] {
 	font-weight: bolder;
 }
 
-.toggle_form {
+.host-Management-section {
+	width: 90%;
+	max-width: 800px;
+	margin: auto;
+	padding: 15px;
+	border-radius: 12px;
 	display: flex;
+	justify-content: space-around;
 	align-items: center;
-	justify-content: center;
-	width: 100%;
-	height: 100%;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	background-color: #F9F9F9;
+	margin-bottom: 30px;
 }
 
-#make-club, #update-club {
-	background-color: #14213D;
-	color: white;
-	padding: 10px 15px;
-	border: none;
-	border-radius: 6px;
-	width: 50%;
-	height: 50px;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	font-size: 1rem;
+.host_text {
 	font-weight: bolder;
+	font-size: 1.2rem;
+	padding-bottom: 15px;
+	padding-right: 10px;
+}
+
+.host_text h1 {
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-start;
+	width: 70px;
+	font-weight: bolder;
+	font-size: 1.2rem;
+	padding-bottom: 10px;
+}
+
+.host_a {
+	display: flex;
+	align-items: center;
+	padding: 10px;
+	margin-bottom: 10px;
+}
+
+.host-pwdCheck {
+	width: 100%;
+	height: 20%;
+	display: flex;
+	justify-content: flex-start;
+}
+
+#pwdCheck {
+	width: 200px;
+	border: 0;
+	border-radius: 10px;
+	background-color: rgb(233, 233, 233);
+	margin-left: 10px;
+	margin-right: 10px;
 }
